--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,7 @@ dependencies {
     compile 'com.google.android.exoplayer:exoplayer:r2.2.0'
     compile "com.android.support:appcompat-v7:${supportLibraryVersion}"
     compile 'com.getbase:floatingactionbutton:1.10.1'
-
+    compile group: 'commons-io', name: 'commons-io', version: '2.5'
 
     /// dependencies for local unit tests
     testCompile 'junit:junit:4.12'
