--- a/build.gradle
+++ b/build.gradle
@@ -169,6 +169,10 @@ android {
                 signingConfig signingConfigs.release
             }
         }
+
+        beta {
+            applicationIdSuffix ".beta"
+        }
     }
 
     applicationVariants.all { variant ->
