--- a/build.gradle
+++ b/build.gradle
@@ -118,13 +118,7 @@ android {
         }
 
         beta {
-            manifest.srcFile 'beta/AndroidManifest.xml'
-            java.srcDirs = ['beta/src']
-            resources.srcDirs = ['beta/src']
-            aidl.srcDirs = ['beta/src']
-            renderscript.srcDirs = ['beta/src']
             res.srcDirs = ['beta/res']
-            assets.srcDirs = ['beta/assets']
         }
 
 
@@ -184,6 +178,8 @@ android {
             // This copies the debuggable attribute and debug signing configurations.
             initWith debug
             applicationIdSuffix ".beta"
+            //It will be added to the version name set in the manifest file
+            versionNameSuffix "_beta"
         }
     }
 
